fix: use relative paths
GitHub pages are hosted in one folder.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="blog/index.html">Blog</a>
                 <a href="about.html">About</a>
                 <a href="resume.html">Resume</a>
-                <a href="resume.html">Fun!</a>
+                <a href="fun.html">Fun!</a>
             </nav>
 
             <h1>Escarlata</h1>
